# SHAP-Compass

./: .gitignore  CITATION.cff  LICENSE  README.md  TODO_BEFORE_RELEASE.md  pyproject.toml
.github/workflows/: test.yml
docs/: build_concept_figures.py  tutorial_zh.md
examples/: 01_quickstart.py  02_conus_full_pipeline.py  02_taiwan_synthetic.py  03_conus_synthetic.py  README.md
scripts/: prepare_conus_data.py
shap_compass/: __init__.py  clustering.py  consensus.py  core.py  dci.py  multi.py  quality.py  som.py  stage2.py  transform.py  utils.py
shap_compass/data/: __init__.py  conus.py
shap_compass/plotting/: __init__.py  _palette.py  bilayer.py  dci_chart.py  heatmap.py  som_grid.py  spatial.py
tests/: test_consensus.py  test_multi.py  test_quality.py  test_stage2.py  test_transform.py
