[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shap-compass"
version = "0.2.0"
description = "SHAP-Compass: a regime-level interpretability framework for spatially heterogeneous attribution mechanisms in GeoAI."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
# NOTE: replace the <...> placeholders before tagging the paper release.
# See TODO_BEFORE_RELEASE.md for the full checklist.
authors = [
    {name = "<FIRST_AUTHOR_NAME>", email = "<FIRST_AUTHOR_EMAIL>"},
]
maintainers = [
    {name = "<FIRST_AUTHOR_NAME>", email = "<FIRST_AUTHOR_EMAIL>"},
]
keywords = [
    "explainable-ai", "shap", "clustering", "self-organizing-map",
    "directional-statistics", "environmental-science", "geoai",
    "attribution-regime",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.21",
    "pandas>=1.3",
    "scipy>=1.7",
    "scikit-learn>=1.0",
    "minisom>=2.3",
    "matplotlib>=3.5",
]

[project.optional-dependencies]
shap = ["shap>=0.41"]
spatial = ["cartopy>=0.22", "geopandas>=0.10", "rasterio>=1.3", "pyproj>=3.4"]
dev = ["pytest>=7.0", "pytest-cov", "ruff"]
docs = ["sphinx", "sphinx-rtd-theme"]

[project.urls]
# Replace GeoAI-Sustainability-Lab with the GitHub user or organisation before release.
Homepage = "https://github.com/GeoAI-Sustainability-Lab/shap-compass"
Documentation = "https://github.com/GeoAI-Sustainability-Lab/shap-compass#readme"
Repository = "https://github.com/GeoAI-Sustainability-Lab/shap-compass"
Issues = "https://github.com/GeoAI-Sustainability-Lab/shap-compass/issues"

[tool.setuptools.packages.find]
include = ["shap_compass*"]

[tool.setuptools.package-data]
shap_compass = ["data/*.csv.gz"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
